# rpaste

./: .gitignore  README.md  pyproject.toml
rpaste/: app.py  paste.py  settings.py
rpaste/static/: index.css
rpaste/templates/: index.html  paste.html
