[tool.poetry]
name = "rpaste"
version = "0.1.0"
description = "Tiny paste service, written in 6 hours."
authors = ["ramazanemreosmanoglu <ramazanemre@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
tinydb = "^4.7.0"
flask-hcaptcha = "^0.6.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
